--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WEBSTUDIO</title>
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
     <header>
@@ -90,6 +91,71 @@
           </li>
         </ul>
       </section>
+      <!-- Portfolio -->
+      <!-- Section 4 -->
+      <h2>Our Portfolio</h2>
+      <ul>
+        <li>
+          <img
+            src="./images/img-1.jpg"
+            alt="Banking App"
+            width="360"
+            height="300"
+          />
+          <h3>Banking App</h3>
+          <p>App</p>
+        </li>
+        <li>
+          <img
+            src="./images/img-2.jpg"
+            alt="QR code"
+            width="360"
+            height="300"
+          />
+          <h3>Cashless Payment</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img
+            src="./images/img-3.jpg"
+            alt="Laptop and phone screen"
+            width="360"
+            height="300"
+          />
+          <h3>Meditation App</h3>
+          <p>App</p>
+        </li>
+        <li>
+          <img
+            src="./images/img-4.jpg"
+            alt="Taxi driver"
+            width="360"
+            height="300"
+          />
+          <h3>Taxi Service</h3>
+          <p>Marketing</p>
+        </li>
+        <li>
+          <img
+            src="./images/img-5.jpg"
+            alt="Variants of screen illustrations"
+            width="360"
+            height="300"
+          />
+          <h3>Screen Illustrations</h3>
+          <p>Design</p>
+        </li>
+        <li>
+          <img
+            src="./images/img-6.jpg"
+            alt="Girl with phone"
+            width="360"
+            height="300"
+          />
+          <h3>Online Courses</h3>
+          <p>Marketing</p>
+        </li>
+      </ul>
     </main>
 
     <footer>
