--- a/index.html
+++ b/index.html
@@ -87,34 +87,34 @@
       </section>
       <!-- Our Team -->
       <!-- Section 3 -->
-      <section>
-        <h2>Our Team</h2>
+      <section class="our-team-section">
+        <h2 class="heading">Our Team</h2>
         <ul>
           <li>
             <img src="./images/1.jpg" alt="Mark Guerrero" width="264" />
-            <h3>Mark Guerrero</h3>
-            <p>Product Designer</p>
+            <h3 class="team-card-name">Mark Guerrero</h3>
+            <p class="team-card-p">Product Designer</p>
           </li>
           <li>
             <img src="./images/2.jpg" alt="Tom Ford" width="264" />
-            <h3>Tom Ford</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-card-name">Tom Ford</h3>
+            <p class="team-card-p">Frontend Developer</p>
           </li>
           <li>
             <img src="./images/3.jpg" alt="Camila Garcia" width="264" />
-            <h3>Camila Garcia</h3>
-            <p>Marketing</p>
+            <h3 class="team-card-name">Camila Garcia</h3>
+            <p class="team-card-p">Marketing</p>
           </li>
           <li>
             <img src="./images/4.jpg" alt="Daniel Wilson" width="264" />
-            <h3>Daniel Wilson</h3>
-            <p>UI Designer</p>
+            <h3 class="team-card-name">Daniel Wilson</h3>
+            <p class="team-card-p">UI Designer</p>
           </li>
         </ul>
       </section>
       <!-- Portfolio -->
       <!-- Section 4 -->
-      <h2>Our Portfolio</h2>
+      <h2 class="heading">Our Portfolio</h2>
       <ul>
         <li>
           <img
@@ -123,8 +123,8 @@
             width="360"
             height="300"
           />
-          <h3>Banking App</h3>
-          <p>App</p>
+          <h3 class="portfolio-headings">Banking App</h3>
+          <p class="portfolio-p">App</p>
         </li>
         <li>
           <img
@@ -133,8 +133,8 @@
             width="360"
             height="300"
           />
-          <h3>Cashless Payment</h3>
-          <p>Marketing</p>
+          <h3 class="portfolio-headings">Cashless Payment</h3>
+          <p class="portfolio-p">Marketing</p>
         </li>
         <li>
           <img
@@ -143,8 +143,8 @@
             width="360"
             height="300"
           />
-          <h3>Meditation App</h3>
-          <p>App</p>
+          <h3 class="portfolio-headings">Meditation App</h3>
+          <p class="portfolio-p">App</p>
         </li>
         <li>
           <img
@@ -153,8 +153,8 @@
             width="360"
             height="300"
           />
-          <h3>Taxi Service</h3>
-          <p>Marketing</p>
+          <h3 class="portfolio-headings">Taxi Service</h3>
+          <p class="portfolio-p">Marketing</p>
         </li>
         <li>
           <img
@@ -163,8 +163,8 @@
             width="360"
             height="300"
           />
-          <h3>Screen Illustrations</h3>
-          <p>Design</p>
+          <h3 class="portfolio-headings">Screen Illustrations</h3>
+          <p class="portfolio-p">Design</p>
         </li>
         <li>
           <img
@@ -173,15 +173,17 @@
             width="360"
             height="300"
           />
-          <h3>Online Courses</h3>
-          <p>Marketing</p>
+          <h3 class="portfolio-headings">Online Courses</h3>
+          <p class="portfolio-p">Marketing</p>
         </li>
       </ul>
     </main>
 
     <footer>
-      <a href="./index.html">WebStudio</a>
-      <p>
+      <a href="./index.html" class="logo"
+        >Web<span class="logo-part-variant">Studio</span></a
+      >
+      <p class="footer-p">
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
       </p>
