--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
           >Web<span class="logo-part">Studio</span></a
         >
         <ul>
-          <li><a class="link" href="/studio">Studio</a></li>
-          <li><a class="link" href="/portfolio">Portfolio</a></li>
-          <li><a class="link" href="/contacts">Contacts</a></li>
+          <li><a class="link" href="./index.html">Studio</a></li>
+          <li><a class="link" href="">Portfolio</a></li>
+          <li><a class="link" href="">Contacts</a></li>
         </ul>
       </nav>
-      <address>
+      <address class="adress">
         <ul>
           <li>
             <a class="contacts" href="mailto:info@devstudio.com"
@@ -90,22 +90,22 @@
       <section class="our-team-section">
         <h2 class="heading">Our Team</h2>
         <ul>
-          <li>
+          <li class="background">
             <img src="./images/1.jpg" alt="Mark Guerrero" width="264" />
             <h3 class="team-card-name">Mark Guerrero</h3>
             <p class="team-card-p">Product Designer</p>
           </li>
-          <li>
+          <li class="background">
             <img src="./images/2.jpg" alt="Tom Ford" width="264" />
             <h3 class="team-card-name">Tom Ford</h3>
             <p class="team-card-p">Frontend Developer</p>
           </li>
-          <li>
+          <li class="background">
             <img src="./images/3.jpg" alt="Camila Garcia" width="264" />
             <h3 class="team-card-name">Camila Garcia</h3>
             <p class="team-card-p">Marketing</p>
           </li>
-          <li>
+          <li class="background">
             <img src="./images/4.jpg" alt="Daniel Wilson" width="264" />
             <h3 class="team-card-name">Daniel Wilson</h3>
             <p class="team-card-p">UI Designer</p>
@@ -179,7 +179,7 @@
       </ul>
     </main>
 
-    <footer>
+    <footer class="footer">
       <a href="./index.html" class="logo"
         >Web<span class="logo-part-variant">Studio</span></a
       >
