--- a/index.html
+++ b/index.html
@@ -114,69 +114,71 @@
       </section>
       <!-- Portfolio -->
       <!-- Section 4 -->
-      <h2 class="heading">Our Portfolio</h2>
-      <ul>
-        <li>
-          <img
-            src="./images/img-1.jpg"
-            alt="Banking App"
-            width="360"
-            height="300"
-          />
-          <h3 class="portfolio-headings">Banking App</h3>
-          <p class="portfolio-p">App</p>
-        </li>
-        <li>
-          <img
-            src="./images/img-2.jpg"
-            alt="QR code"
-            width="360"
-            height="300"
-          />
-          <h3 class="portfolio-headings">Cashless Payment</h3>
-          <p class="portfolio-p">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/img-3.jpg"
-            alt="Laptop and phone screen"
-            width="360"
-            height="300"
-          />
-          <h3 class="portfolio-headings">Meditation App</h3>
-          <p class="portfolio-p">App</p>
-        </li>
-        <li>
-          <img
-            src="./images/img-4.jpg"
-            alt="Taxi driver"
-            width="360"
-            height="300"
-          />
-          <h3 class="portfolio-headings">Taxi Service</h3>
-          <p class="portfolio-p">Marketing</p>
-        </li>
-        <li>
-          <img
-            src="./images/img-5.jpg"
-            alt="Variants of screen illustrations"
-            width="360"
-            height="300"
-          />
-          <h3 class="portfolio-headings">Screen Illustrations</h3>
-          <p class="portfolio-p">Design</p>
-        </li>
-        <li>
-          <img
-            src="./images/img-6.jpg"
-            alt="Girl with phone"
-            width="360"
-            height="300"
-          />
-          <h3 class="portfolio-headings">Online Courses</h3>
-          <p class="portfolio-p">Marketing</p>
-        </li>
-      </ul>
+      <section>
+        <h2 class="heading">Our Portfolio</h2>
+        <ul>
+          <li>
+            <img
+              src="./images/img-1.jpg"
+              alt="Banking App"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-headings">Banking App</h3>
+            <p class="portfolio-p">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/img-2.jpg"
+              alt="QR code"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-headings">Cashless Payment</h3>
+            <p class="portfolio-p">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/img-3.jpg"
+              alt="Laptop and phone screen"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-headings">Meditation App</h3>
+            <p class="portfolio-p">App</p>
+          </li>
+          <li>
+            <img
+              src="./images/img-4.jpg"
+              alt="Taxi driver"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-headings">Taxi Service</h3>
+            <p class="portfolio-p">Marketing</p>
+          </li>
+          <li>
+            <img
+              src="./images/img-5.jpg"
+              alt="Variants of screen illustrations"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-headings">Screen Illustrations</h3>
+            <p class="portfolio-p">Design</p>
+          </li>
+          <li>
+            <img
+              src="./images/img-6.jpg"
+              alt="Girl with phone"
+              width="360"
+              height="300"
+            />
+            <h3 class="portfolio-headings">Online Courses</h3>
+            <p class="portfolio-p">Marketing</p>
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer class="footer">
